--- a/art-quiz/src/styles/_settings.scss
+++ b/art-quiz/src/styles/_settings.scss
@@ -48,6 +48,10 @@
     justify-content: space-between;
 }
 
+.settings-center {
+    justify-content: center;
+}
+
 .settings-container {
     margin-left: 100px;
     padding: 15px;
