feat: add pictures to questions

--- a/art-quiz/src/styles/_pictures-question.scss
+++ b/art-quiz/src/styles/_pictures-question.scss
@@ -94,3 +94,13 @@
 .container-question__active {
     display: flex;
 }
+
+.container-questions-pictures {
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-questions-pictures__active {
+    display: flex;
+}
