--- a/art-quiz/src/styles/_pictures-question.scss
+++ b/art-quiz/src/styles/_pictures-question.scss
@@ -99,6 +99,34 @@
     display: none;
     justify-content: center;
     align-items: center;
+    .container-content {
+        .title-pictures {
+            color: #FFFFFF;
+            font-size: 22px;
+            margin: 15px 0;
+            font-weight: 300;
+            text-align: center;
+        }
+        .answer-pictures {
+            max-width: 750px;
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 15px;
+            row-gap: 15px;
+            justify-content: center;
+            .picture-item {
+                width: 300px;
+                padding-bottom: 25%;
+                cursor: pointer;
+                border-radius: 6px;
+            }
+            .picture-item:hover {
+                -webkit-box-shadow: 0px 0px 20px 3px rgba(255, 255, 255, 0.5);
+                -moz-box-shadow: 0px 0px 20px 3px rgba(255, 255, 255, 0.5);
+                box-shadow: 0px 0px 20px 3px rgba(255, 255, 255, 0.5);
+            }
+        }
+    }
 }
 
 .container-questions-pictures__active {
