--- a/news-JS/src/components/view/sources/sources.css
+++ b/news-JS/src/components/view/sources/sources.css
@@ -1,11 +1,46 @@
+main {
+    position: relative;
+}
+
+.sources-bg-top {
+    position: absolute;
+    top: 0;
+    width: 98%;
+    height: 30px;
+    background-color: rgba(23, 24, 28, 0.8);
+}
+
+.sources-bg-bottom {
+    position: absolute;
+    top: 180px;
+    width: 98%;
+    height: 30px;
+    background-color: rgba(23, 24, 28, 0.8);
+}
+
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 120px;
+    height: 210px;
+    justify-content: center;
     overflow: auto;
+    row-gap: 10px;
+    column-gap: 10px;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
+    padding: 30px 10px;
+    box-sizing: border-box;
+}
+
+.sources::-webkit-scrollbar {
+    width: 7px;
+}
+
+.sources::-webkit-scrollbar-thumb {
+    background-color: #30c5ff;
+    border-radius: 10px;
+    width: 5px;
 }
 
 .source__item {
@@ -13,7 +48,6 @@
     border: 2px solid #30c5ff;
     font: inherit;
     line-height: 1;
-    margin: 0.5em;
     padding: 1em 2em;
     color: #70d6ff;
     transition: 0.25s;
