--- a/news-JS/src/components/view/sources/sources.css
+++ b/news-JS/src/components/view/sources/sources.css
@@ -1,7 +1,3 @@
-main {
-    /* height: calc(100% - 230px); */
-}
-
 .sources-bg-top {
     position: absolute;
     top: 0;
@@ -21,7 +17,7 @@ main {
 .source-container {
     height: 210px;
     position: relative;
-    margin: 30px;
+    margin: 30px 0;
 }
 
 .source-title {
@@ -53,7 +49,7 @@ main {
     column-gap: 10px;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
-    padding: 30px 10px;
+    padding: 30px 0;
     box-sizing: border-box;
 }
 
