--- a/news-JS/src/global.css
+++ b/news-JS/src/global.css
@@ -3,10 +3,13 @@ body {
     background: #17181c;
     font-family: sans-serif;
     box-sizing: border-box;
+    margin: 0;
 }
 
 .wrapper-container {
     min-height: 100vh;
+    width: calc(100% - 40px);
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 130px 1fr 150px;
@@ -52,6 +55,8 @@ footer {
 
 .webdev {
     opacity: 0.6;
+    font-size: 14px;
+    letter-spacing: 0.02em;
 }
 
 .github-link {
@@ -73,6 +78,7 @@ footer .copyright {
     font-size: 14px;
     color: #333;
     text-align: center;
+    letter-spacing: 0.02em;
 }
 footer .copyright a {
     color: #444;
@@ -82,4 +88,16 @@ footer .copyright a:hover {
 }
 footer .copyright:before {
     content: '©';
+}
+
+@media (max-width: 420px) {
+    .rs-link {
+        width: 90px;
+        height: 30px;
+    }
+
+    .github-link {
+        width: 30px;
+        height: 30px;
+    }
 }
