feat: add sort logic to project

--- a/christmas-task/src/styles/_start-page.scss
+++ b/christmas-task/src/styles/_start-page.scss
@@ -10,9 +10,9 @@ main {
   height: 100%;
 }
 
-.start {
-  background: #192f2d;
-}
+// .main-container {
+//   background: #192f2d;
+// }
 
 .wrapper {
   width: calc(100% - 100px);
