--- a/christmas-task/src/styles/_toys.scss
+++ b/christmas-task/src/styles/_toys.scss
@@ -148,6 +148,30 @@
     .choose-item:hover {
       opacity: 75%;
     }
+
+    .all-item {
+      position: absolute;
+      width: 90%;
+      left: 5%;
+      top: 110%;
+      border-radius: 6px;
+      border: 1px solid #2196f3;
+      background-color: #3e5857;
+      .sort-item {
+        font-family: 'Neucha-Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        letter-spacing: 0.05em;
+        color: #fff;
+        padding: 10px;
+        cursor: pointer;
+      }
+
+      .sort-item:hover {
+        background-color: #669396;
+      }
+    }
   }
 }
 
@@ -600,17 +624,20 @@
 
 .toys-collection-container {
   overflow: hidden;
-  h2 {
-    margin: 20px 0 20px 50px;
-    font-family: 'Neucha-Regular';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 25px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #fff;
+  .title {
+    display: flex;
+    column-gap: 50px;
+    h2 {
+      margin: 20px 0 20px 50px;
+      font-family: 'Neucha-Regular';
+      font-style: normal;
+      font-weight: normal;
+      font-size: 25px;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      color: #fff;
+    }
   }
-
   .collection-container {
     height: 100%;
     overflow: scroll;
@@ -670,6 +697,18 @@
       }
     }
 
+    .active-toy {
+      box-sizing: border-box;
+      padding: 5px 5px;
+      border: #4caf50 solid 5px;
+      background: radial-gradient(
+        109.56% 109.56% at 0% -2.94%,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(70, 109, 114, 0.4) 100%
+      );
+      box-shadow: 0px 0px 10px 3px rgba(76, 175, 80, 0.75);
+    }
+
     .container-content:hover {
       box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.7);
       background: radial-gradient(
@@ -682,6 +721,9 @@
           transform: scale(1.1);
         }
       }
+    }
+    .active-toy:hover {
+      box-shadow: 0px 0px 10px 3px rgba(76, 175, 80, 0.75);
     }
   }
 
