--- a/christmas-task/src/styles/_toys.scss
+++ b/christmas-task/src/styles/_toys.scss
@@ -85,16 +85,16 @@
       border: 1px solid #03a9f4;
     }
   }
-  .search-icon {
+  .clean-icon {
     position: absolute;
     top: 50%;
     right: 15px;
     transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     cursor: pointer;
     transition: 0.3s;
-    background: top 0 left 0 / 100% 100% url(../assets/images/svg/search.svg);
+    background: top 0 left 0 / 100% 100% url(../assets/images/svg/close.svg);
   }
   .search-icon:hover {
     opacity: 75%;
@@ -675,15 +675,17 @@ main .noUi-tooltip {
 
     .message {
       display: none;
+      width: 270px;
+      border-radius: 6px;
       position: absolute;
-      right: 50%;
+      left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
       opacity: 0;
       transition: 0.5s;
       .message-item {
         padding: 30px;
-        background: #43686a;
+        background: rgba(67, 104, 106, 0.7);
         color: #fafafa;
         font-size: 20px;
       }
