--- a/christmas-task/src/styles/_start-page.scss
+++ b/christmas-task/src/styles/_start-page.scss
@@ -1,7 +1,49 @@
+header {
+  width: 100vw;
+  height: 50px;
+  background-color: #192f2d;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  padding-top: 5px;
+  .logo {
+    width: 30px;
+    height: 40px;
+    transition: 0.3s;
+    background: top 0 left 0 / 100% 100% url(../assets/images/svg/tree.svg);
+    cursor: pointer;
+  }
+
+  .logo:hover {
+    background: top 0 left 0 / 100% 100% url(../assets/images/svg/tree-active.svg);
+    transform: scale(1.05);
+  }
+
+  .page {
+    font-family: 'Neucha-Regular';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #fff;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+
+  .page:hover {
+    color: #009688;
+    transform: scale(1.05);
+  }
+}
+
 main {
   position: relative;
   width: 100vw;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 150px);
   background: top 0 left 0 / 100% 100% url(../assets/images/bg.jpg);
 }
 
@@ -56,11 +98,7 @@ main {
       text-transform: uppercase;
       color: #fff;
       letter-spacing: 0.05em;
-      background: radial-gradient(
-        118.88% 606.86% at 0% 0%,
-        rgba(36, 197, 219, 0.15) 0%,
-        rgba(36, 197, 219, 0) 100%
-      );
+      background: radial-gradient(118.88% 606.86% at 0% 0%, rgba(36, 197, 219, 0.15) 0%, rgba(36, 197, 219, 0) 100%);
       backdrop-filter: blur(31px);
       border-radius: 30px;
     }
@@ -80,11 +118,7 @@ main {
     color: #fff;
     letter-spacing: 0.05em;
     transform: translateX(-50%);
-    background: radial-gradient(
-      118.88% 606.86% at 0% 0%,
-      rgba(36, 197, 219, 0.15) 0%,
-      rgba(36, 197, 219, 0) 100%
-    );
+    background: radial-gradient(118.88% 606.86% at 0% 0%, rgba(36, 197, 219, 0.15) 0%, rgba(36, 197, 219, 0) 100%);
     backdrop-filter: blur(31px);
     border-radius: 30px;
     transition: 0.3s;
@@ -124,8 +158,7 @@ footer {
       display: block;
       width: 180px;
       height: 60px;
-      background: top 0 left 0 / 100% 100%
-        url(../assets/images/rs_school_js.png);
+      background: top 0 left 0 / 100% 100% url(../assets/images/rs_school_js.png);
     }
   }
 }
