--- a/christmas-task/src/styles/_tree.scss
+++ b/christmas-task/src/styles/_tree.scss
@@ -103,7 +103,6 @@
     }
 
     .conteiner-content__active {
-      border: #03a9f4 2px solid;
     }
   }
 }
@@ -199,12 +198,7 @@
     }
 
     .garland-1 {
-      background: linear-gradient(
-        45deg,
-        rgb(221, 13, 13),
-        rgb(229, 242, 16),
-        rgb(10, 229, 17)
-      );
+      background: linear-gradient(45deg, rgb(221, 13, 13), rgb(229, 242, 16), rgb(10, 229, 17));
       box-shadow: 0px 0px 10px 2px rgba(251, 251, 251, 0.3);
     }
     .garland-1:hover {
@@ -212,12 +206,7 @@
       box-shadow: 0px 0px 15px 2px rgba(251, 251, 251, 1);
     }
     .garland-2 {
-      background: linear-gradient(
-        45deg,
-        rgb(246, 7, 7),
-        rgb(204, 76, 63),
-        rgb(223, 112, 72)
-      );
+      background: linear-gradient(45deg, rgb(246, 7, 7), rgb(204, 76, 63), rgb(223, 112, 72));
       box-shadow: 0px 0px 10px 2px rgba(255, 1, 1, 0.3);
     }
     .garland-2:hover {
@@ -225,12 +214,7 @@
       box-shadow: 0px 0px 15px 2px rgb(255, 1, 1);
     }
     .garland-3 {
-      background: linear-gradient(
-        45deg,
-        rgb(15, 0, 255),
-        rgb(37, 42, 195),
-        rgb(27, 13, 111)
-      );
+      background: linear-gradient(45deg, rgb(15, 0, 255), rgb(37, 42, 195), rgb(27, 13, 111));
       box-shadow: 0px 0px 10px 2px rgba(11, 60, 247, 0.3);
     }
     .garland-3:hover {
@@ -238,12 +222,7 @@
       box-shadow: 0px 0px 15px 2px rgba(11, 60, 247, 1);
     }
     .garland-4 {
-      background: linear-gradient(
-        45deg,
-        rgb(15, 255, 0),
-        rgb(37, 195, 42),
-        rgb(13, 111, 55)
-      );
+      background: linear-gradient(45deg, rgb(15, 255, 0), rgb(37, 195, 42), rgb(13, 111, 55));
       box-shadow: 0px 0px 10px 2px rgba(35, 247, 11, 0.3);
     }
     .garland-4:hover {
@@ -251,12 +230,7 @@
       box-shadow: 0px 0px 15px 2px rgba(35, 247, 11, 1);
     }
     .garland-5 {
-      background: linear-gradient(
-        45deg,
-        rgb(229, 255, 0),
-        rgb(179, 195, 37),
-        rgb(111, 108, 13)
-      );
+      background: linear-gradient(45deg, rgb(229, 255, 0), rgb(179, 195, 37), rgb(111, 108, 13));
       box-shadow: 0px 0px 10px 2px rgba(215, 227, 16, 0.3);
     }
     .garland-5:hover {
@@ -328,7 +302,7 @@
 }
 
 .main-tree {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 150px);
   position: relative;
   .christmas-bg-current {
     position: absolute;
@@ -336,8 +310,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-position: center;
-    background-size: cover;
+    background: center / cover url(../assets/images/bg/1.jpg);
   }
 
   .christmas-tree-carrent {
@@ -345,15 +318,176 @@
     bottom: 1%;
     left: 50%;
     transform: translateX(-50%);
-    width: 60%;
-    height: 85%;
+    width: 300px;
+    height: 450px;
+    z-index: 10;
   }
 }
 
 .toys-tree {
   background: rgba(25, 47, 45, 0.7);
+  .title {
+    h2 {
+      margin: 20px 0 20px 50px;
+      font-family: 'Neucha-Regular';
+      font-style: normal;
+      font-weight: normal;
+      font-size: 25px;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      color: #fff;
+      transition: 0.3s;
+      cursor: pointer;
+    }
+  }
+}
+
+.toys-tree-container {
+  display: grid;
+  padding: 5px;
+  width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  column-gap: 5px;
+  row-gap: 5px;
+  .toy-for-tree {
+    position: relative;
+    padding-bottom: 100%;
+    background: radial-gradient(
+      109.56% 109.56% at 0% -2.94%,
+      rgba(255, 255, 255, 0.5) 0%,
+      rgba(179, 246, 255, 0.5) 100%
+    );
+    backdrop-filter: blur(4px);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    transition: 0.3s;
+    cursor: pointer;
+    border: rgb(23 42 41) 2px solid;
+    .toy-icon {
+      position: absolute;
+      width: 65%;
+      height: 65%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .toy-count {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      right: 0;
+      bottom: 0;
+      width: 20px;
+      height: 20px;
+      border-top-left-radius: 50%;
+      background-color: crimson;
+      color: #fff;
+      font-size: 11px;
+    }
+  }
+
+  .toy-for-tree:hover {
+    box-shadow: 0px 0px 20px 4px rgba(1, 131, 85, 0.9) inset;
+  }
 }
 
 .hide {
   display: none;
+}
+
+.garland {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  --red: #ff2c2c;
+  --yellow: #ffeb00;
+  --green: #00ff5d;
+  --blue: #0095ff;
+  --speed: 1.5s;
+  z-index: 15;
+}
+
+.red {
+  fill: var(--red);
+  animation: var(--speed) alternate 0s infinite blinkRed;
+}
+
+.yellow {
+  fill: var(--yellow);
+  animation: var(--speed) alternate 0s infinite blinkYellow;
+}
+
+.blue {
+  fill: var(--blue);
+  animation: var(--speed) alternate 0s infinite blinkBlue;
+}
+
+.green {
+  fill: var(--green);
+  animation: var(--speed) alternate 0s infinite blinkGreen;
+}
+
+@keyframes blinkRed {
+  0% {
+    fill: var(--red);
+  }
+  25% {
+    fill: var(--blue);
+  }
+  50% {
+    fill: var(--green);
+  }
+  75% {
+    fill: var(--yellow);
+  }
+}
+
+@keyframes blinkYellow {
+  0% {
+    fill: var(--yellow);
+  }
+  25% {
+    fill: var(--red);
+  }
+  50% {
+    fill: var(--blue);
+  }
+  75% {
+    fill: var(--green);
+  }
+}
+
+@keyframes blinkBlue {
+  0% {
+    fill: var(--blue);
+  }
+  25% {
+    fill: var(--green);
+  }
+  50% {
+    fill: var(--yellow);
+  }
+  75% {
+    fill: var(--red);
+  }
+}
+
+@keyframes blinkGreen {
+  0% {
+    fill: var(--green);
+  }
+  25% {
+    fill: var(--yellow);
+  }
+  50% {
+    fill: var(--red);
+  }
+  75% {
+    fill: var(--blue);
+  }
 }
