--- a/async-race/src/style/_main.scss
+++ b/async-race/src/style/_main.scss
@@ -102,6 +102,7 @@
     border-radius: 3px;
     background-color: rgb(250, 250, 250);
     color: #000;
+    font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
   }
@@ -128,13 +129,28 @@
     height: 50px;
     background-color: rgb(31, 28, 28);
     color: #fff;
+    font-size: 24px;
     border-radius: 3px;
     cursor: pointer;
     transition: 0.3s;
   }
 
   .subtitle-car-btn:hover {
-    background-color: rgb(56, 50, 50);
+    background-color: rgb(0, 0, 0);
+  }
+
+  .stop-btn {
+    color: firebrick;
+  }
+
+  .disabled {
+    background-color: rgb(158, 153, 153);
+    color: dimgray;
+    cursor: default;
+  }
+
+  .disabled:hover {
+    background-color: rgb(158, 153, 153);
   }
 
   .track {
@@ -190,4 +206,26 @@
   .disabled:hover {
     background-color: rgb(158, 153, 153);
   }
+}
+
+.winner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 1s;
+  color: #fff;
+  text-shadow:
+           0 0 2px #eee,
+           0 0 4px #fff,
+           0 -2px 4px #ff3,
+           2px -4px 6px #fd3,
+           -2px -6px 11px #f80,
+           2px -8px 18px #f20;
+  font-size: 40px;
+  opacity: 0;
+}
+
+.winner_active {
+  opacity: 100%;
 }
